<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="Subscriptions Setting"
            android:textColor="@color/color_000000"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_x" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_000000" />

    <TextView
        android:id="@+id/btn_open_subs_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/common_box_bg"
        android:gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/msg_open_subscriptions_menu"
        android:textColor="@color/color_000000"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/subs_product_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_subscription_purchased"
            android:textColor="@color/color_000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_open_subs_detail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/common_box_bg"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/msg_open_subscription_detail"
            android:textColor="@color/color_000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_recurring_notice"
            android:textColor="@color/color_000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/desc_recurring_notice_desc"
            android:textColor="@color/color_666666" />
    </LinearLayout>
</LinearLayout>
